// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EstimatedPopulation renders circle with radius correctly - InfoBox 1`] = `
"<Panel className=\\"estimated-population__figure\\" component=\\"div\\" size=\\"default\\">
  <div className=\\"figure__label\\">
    Est. Total Population
  </div>
  <div className=\\"figure__value\\">
    120,448
  </div>
  <div className=\\"figure__description\\">
    Figures obtained through the latest US Census show that the immediate 
    3.1
     
    mi
     area around the site has approx.
     
    120,000
     total inhabitants.
  </div>
</Panel>"
`;

exports[`EstimatedPopulation renders circle with radius correctly - Wrapper 1`] = `
"<div className=\\"estimated-population\\">
  <div className=\\"estimated-population__figure-wrapper\\">
    <InfoBox population={120448} center={{...}} radius={3.1} units=\\"mi\\" />
  </div>
  <div className=\\"estimated-population__map-wrapper\\">
    <MarketSizeMap population={120448} center={{...}} radius={3.1} units=\\"mi\\" />
  </div>
</div>"
`;

exports[`EstimatedPopulation renders zip code polygons correctly - InfoBox 1`] = `
"<Panel className=\\"estimated-population__figure\\" component=\\"div\\" size=\\"default\\">
  <div className=\\"figure__label\\">
    Est. Total Population
  </div>
  <div className=\\"figure__value\\">
    120,448
  </div>
  <div className=\\"figure__description\\">
    Figures obtained through the latest US Census show that the selected zip codes have approx. 
    120,000
     total inhabitants.
  </div>
</Panel>"
`;

exports[`EstimatedPopulation renders zip code polygons correctly - Wrapper 1`] = `
"<div className=\\"estimated-population\\">
  <div className=\\"estimated-population__figure-wrapper\\">
    <InfoBox population={120448} zip_codes={{...}} />
  </div>
  <div className=\\"estimated-population__map-wrapper\\">
    <MarketSizeMap population={120448} zip_codes={{...}} />
  </div>
</div>"
`;
